--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-B9oX55vN.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CWhCUgzY.css">
+    <script type="module" crossorigin src="/coffee/assets/main-RUK_SBf5.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-Ba7qblB1.css">
   </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div class="row align-items-center">
       <!-- 左側 breadcrumb -->
       <div class="col-2 col-md-4">
-        <nav class="navbar nav-padding navbar-expand-lg">
+        <nav class="navbar navbar-dark nav-padding navbar-expand-md nav-font-size">
           <!-- RWD漢堡選單  拉出選單尚未設置-->
           <button
             class="navbar-toggler border-0"
@@ -30,58 +30,57 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <!-- breadcrumb -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ol class="breadcrumb me-auto mb-2 mb-lg-0 text-primary-50">
-              <li class="breadcrumb-item">
-                <a class="nav-link" aria-current="page" href="about.html"
+          <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
+            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
+              <li class="breadcrumb-item nav-item header-hover">
+                <a
+                  class="nav-link d-inline-block p-12"
+                  aria-current="page"
+                  href="about.html"
                   >關於羊蹄</a
                 >
               </li>
-              <li class="breadcrumb-item">
+              <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block"
+                  class="nav-link d-inline-block p-12"
                   aria-current="page"
                   href="products.html"
                   >線上商店</a
                 >
               </li>
-              <li class="breadcrumb-item">
+              <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block"
+                  class="nav-link d-inline-block p-12"
                   aria-current="page"
                   href="explore.html"
                   >探索風味</a
                 >
               </li>
-            </ol>
+            </ul>
           </div>
         </nav>
       </div>
 
       <!-- 中間 logo -->
       <div class="col-6 col-md-4 text-center">
-        <a class="navbar-brand py-16 d-inline-block" href="index.html">
-          <img
-            src="/assets/images/Type=White.png"
-            alt="品牌 Logo"
-            width="240"
-            height="56" />
-        </a>
+        <div class="logo-wrap d-flex justify-content-center flex-grow-1 py-16">
+          <a class="navbar-brand logo d-inline-block" href="index.html"></a>
+        </div>
       </div>
 
       <!-- 右側購物車 & 會員  RWD會消失-->
       <div class="col-4 col-md-4">
-        <nav class="d-flex justify-content-end align-items-center gap-3 header-right">
+        <nav class="d-flex align-items-center gap-3">
           <a class="nav-link p-12 me-12" href="#">
             <img
-              src="/assets/images/ic_Shopping_Cart.png"
+              src="data:image/svg+xml,%3csvg%20width='36'%20height='36'%20viewBox='0%200%2036%2036'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M3.75%206.375C3.75%205.75368%204.25368%205.25%204.875%205.25H5.71239C7.13809%205.25%207.99173%206.20848%208.47988%207.09948C8.80524%207.69341%209.04062%208.38227%209.22473%209.00593C9.27459%209.00201%209.32511%209%209.3762%209H28.1222C29.3675%209%2030.2667%2010.1916%2029.9253%2011.3892L27.1836%2021.0028C26.6784%2022.7748%2025.0593%2023.9967%2023.2169%2023.9967H14.2947C12.4369%2023.9967%2010.8084%2022.7549%2010.3167%2020.9634L9.17601%2016.8068L7.28811%2010.4337L7.28505%2010.4225C7.0515%209.57077%206.8323%208.77508%206.50659%208.18055C6.19029%207.6032%205.93815%207.5%205.71239%207.5H4.875C4.25368%207.5%203.75%206.99632%203.75%206.375ZM13.5%2031.5C15.1569%2031.5%2016.5%2030.1569%2016.5%2028.5C16.5%2026.8431%2015.1569%2025.5%2013.5%2025.5C11.8431%2025.5%2010.5%2026.8431%2010.5%2028.5C10.5%2030.1569%2011.8431%2031.5%2013.5%2031.5ZM24%2031.5C25.6569%2031.5%2027%2030.1569%2027%2028.5C27%2026.8431%2025.6569%2025.5%2024%2025.5C22.3431%2025.5%2021%2026.8431%2021%2028.5C21%2030.1569%2022.3431%2031.5%2024%2031.5Z'%20fill='%23F7F6EF'/%3e%3c/svg%3e"
               alt="購物車"
               width="26"
               height="26" />
           </a>
           <a class="nav-link p-12" href="#">
             <img
-              src="/assets/images/ic_User.png"
+              src="data:image/svg+xml,%3csvg%20width='36'%20height='36'%20viewBox='0%200%2036%2036'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M26.6317%2021.0008C28.4949%2021.0008%2030.0051%2022.511%2030.0051%2024.3741V25.7517C30.0051%2026.6118%2029.7363%2027.4503%2029.2362%2028.1501C26.9173%2031.3949%2023.1309%2033.0024%2018.0006%2033.0024C12.8691%2033.0024%209.08464%2031.3943%206.7714%2028.1477C6.27346%2027.4488%206.00586%2026.6121%206.00586%2025.754V24.3741C6.00586%2022.511%207.51613%2021.0008%209.37916%2021.0008H26.6317ZM18.0006%203.00781C22.1427%203.00781%2025.5006%206.36568%2025.5006%2010.5078C25.5006%2014.65%2022.1427%2018.0078%2018.0006%2018.0078C13.8584%2018.0078%2010.5005%2014.65%2010.5005%2010.5078C10.5005%206.36568%2013.8584%203.00781%2018.0006%203.00781Z'%20fill='%23F7F6EF'/%3e%3c/svg%3e"
               alt="會員"
               width="24"
               height="30" />
@@ -89,9 +88,6 @@
         </nav>
       </div>
     </div>
-
-    
-
   </div>
 </div>
       <div id="carouselExampleFade" class="banner carousel slide carousel-fade" data-bs-ride="carousel">
@@ -164,7 +160,7 @@
               </div>
             </div>
             <div class="col-8">
-              <img src="/assets/images/index/gift box.png" alt="中秋禮盒">
+              <img src="/coffee/images/index/gift box.png" alt="中秋禮盒">
             </div>
           </div>
         </div>
@@ -207,7 +203,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/greenCoffeeCup.png"
+                <img src="/coffee/images/productsImg/greenCoffeeCup.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -245,7 +241,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/whiteCoffeeCup.png"
+                <img src="/coffee/images/productsImg/whiteCoffeeCup.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -283,7 +279,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/yellowCoffeeCup.png"
+                <img src="/coffee/images/productsImg/yellowCoffeeCup.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -330,7 +326,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/blackCoffeeBean.png"
+                <img src="/coffee/images/productsImg/blackCoffeeBean.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -367,7 +363,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/brownCoffeeBean.png"
+                <img src="/coffee/images/productsImg/brownCoffeeBean.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -405,7 +401,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/redCoffeeBean.png"
+                <img src="/coffee/images/productsImg/redCoffeeBean.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -438,16 +434,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Bella.png" alt="YUI">
+                  <img class="me-12" src="/coffee/images/index/feedback/Bella.png" alt="YUI">
                   <p class="label-medium ls-2 text-primary-950 mb-0">YUI</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
@@ -456,16 +452,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Marco">
+                  <img class="me-12" src="/coffee/images/index/feedback/Andy.png" alt="Marco">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Marco</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.5</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   每次來這裡都能感受到良好的氛圍，咖啡的質量也很高，尤其是他們的拿鐵，絕對推薦！</p>
@@ -474,16 +470,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Charlie.png" alt="Sherry">
+                  <img class="me-12" src="/coffee/images/index/feedback/Charlie.png" alt="Sherry">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Sherry</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.8</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   這裡的咖啡真的很有深度，豆子選擇講究，完全可以感受到烘焙師的用心，值得一試！</p>
@@ -492,15 +488,15 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/man2.png" alt="Barret">
+                  <img class="me-12" src="/coffee/images/index/feedback/man2.png" alt="Barret">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Barret</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.0</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
                   <svg width="16" height="17" fill="#2F2119" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M10.788 3.103c.495-1.004 1.926-1.004 2.421 0l2.358 4.777 5.273.766c1.107.161 1.549 1.522.748 2.303l-3.816 3.72.901 5.25c.19 1.103-.968 1.944-1.959 1.424l-4.716-2.48-4.715 2.48c-.99.52-2.148-.32-1.96-1.424l.901-5.25-3.815-3.72c-.801-.78-.359-2.142.748-2.303L8.43 7.88l2.358-4.777Zm1.21.936L9.74 8.615a1.35 1.35 0 0 1-1.016.738l-5.05.734 3.654 3.562c.318.31.463.757.388 1.195l-.862 5.03 4.516-2.375a1.35 1.35 0 0 1 1.257 0l4.516 2.374-.862-5.029a1.35 1.35 0 0 1 .388-1.195l3.654-3.562-5.05-.734a1.35 1.35 0 0 1-1.016-.738l-2.259-4.576Z"
@@ -514,16 +510,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Ethan.png" alt="awei">
+                  <img class="me-12" src="/coffee/images/index/feedback/Ethan.png" alt="awei">
                   <p class="label-medium ls-2 text-primary-950 mb-0">awei</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.7</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   服務態度很好，咖啡的風味獨特，特別喜歡他們的季節限定飲品，每次都會有驚喜！</p>
@@ -532,16 +528,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/man.png" alt="Hsun">
+                  <img class="me-12" src="/coffee/images/index/feedback/man.png" alt="Hsun">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Hsun</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/coffee/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   包裝精美，咖啡豆香氣十足，出貨速度快，第一次線上訂購就很滿意，收到的時候香味撲鼻。</p>
