--- a/explore.html
+++ b/explore.html
@@ -10,8 +10,8 @@
     fetchpriority="high" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
-    <script type="module" crossorigin src="/coffee/assets/main-RUK_SBf5.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-Ba7qblB1.css">
+    <script type="module" crossorigin src="/coffee/assets/main-CUeokSsu.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-EJFKJA73.css">
   </head>
 
 <body>
@@ -73,7 +73,7 @@
 
       <!-- 右側購物車 & 會員  RWD會消失-->
       <div class="col-4 col-md-4">
-        <nav class="d-flex align-items-center gap-3">
+        <nav class="d-flex justify-content-end gap-3">
           <a class="nav-link p-12 me-12" href="#">
             <img
               src="data:image/svg+xml,%3csvg%20width='36'%20height='36'%20viewBox='0%200%2036%2036'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M3.75%206.375C3.75%205.75368%204.25368%205.25%204.875%205.25H5.71239C7.13809%205.25%207.99173%206.20848%208.47988%207.09948C8.80524%207.69341%209.04062%208.38227%209.22473%209.00593C9.27459%209.00201%209.32511%209%209.3762%209H28.1222C29.3675%209%2030.2667%2010.1916%2029.9253%2011.3892L27.1836%2021.0028C26.6784%2022.7748%2025.0593%2023.9967%2023.2169%2023.9967H14.2947C12.4369%2023.9967%2010.8084%2022.7549%2010.3167%2020.9634L9.17601%2016.8068L7.28811%2010.4337L7.28505%2010.4225C7.0515%209.57077%206.8323%208.77508%206.50659%208.18055C6.19029%207.6032%205.93815%207.5%205.71239%207.5H4.875C4.25368%207.5%203.75%206.99632%203.75%206.375ZM13.5%2031.5C15.1569%2031.5%2016.5%2030.1569%2016.5%2028.5C16.5%2026.8431%2015.1569%2025.5%2013.5%2025.5C11.8431%2025.5%2010.5%2026.8431%2010.5%2028.5C10.5%2030.1569%2011.8431%2031.5%2013.5%2031.5ZM24%2031.5C25.6569%2031.5%2027%2030.1569%2027%2028.5C27%2026.8431%2025.6569%2025.5%2024%2025.5C22.3431%2025.5%2021%2026.8431%2021%2028.5C21%2030.1569%2022.3431%2031.5%2024%2031.5Z'%20fill='%23F7F6EF'/%3e%3c/svg%3e"
