--- a/pages/products.html
+++ b/pages/products.html
@@ -60,8 +60,14 @@
               <a class="nav-link paragraph-medium py-20 px-15" href="#">非洲產區</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link paragraph-medium py-20 px-15" href="#">南美洲產區</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link paragraph-medium py-20 px-15" href="#">亞洲產區</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link paragraph-medium py-20 px-15" href="#">限定禮盒</a>
+            </li>                        
           </ul>
         </div>
 
@@ -418,7 +424,7 @@
       </div>
 
       <!-- 導覽頁碼 -->
-      <div class="d-flex justify-content-center mb-12">
+      <div class="d-flex justify-content-center mb-12 mb-md-40">
         <nav aria-label="Page navigation example">
           <ul class="pagination mb-0">
             <li class="page-item mx-6">
@@ -426,13 +432,33 @@
                 <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0Z" fill="#2F2119"/></svg>
               </a>
             </li>
-            <li class="page-item mx-6"><a class="page-link products-pagination paragraph-large py-4 px-8" href="#">1</a></li>
-            <li class="page-item mx-6"><a class="page-link products-pagination paragraph-large py-4 px-8" href="#">2</a></li>
-            <li class="page-item mx-6">
-              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
+
+            <li class="page-item mx-6 active">
+              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#">1
               </a>
             </li>
+
+            <li class="page-item mx-6">
+              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#">2
+              </a>
+            </li>
+
+            <li class="page-item mx-6">
+              <div class="ellipsis paragraph-large py-4 px-8">...
+              </div>
+            </li>
+
+            <li class="page-item mx-6">
+              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#">15
+              </a>
+            </li>
+            
+            <li class="page-item mx-6">
+              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#" aria-label="Previous">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M8.47 4.22a.75.75 0 0 0 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25a.75.75 0 0 0 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z" fill="#2F2119"/></svg>
+              </a>
+            </li>            
+
           </ul>
         </nav>
       </div>
