0910 about-sheepo rwd font

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,8 +17,8 @@
         <div class="about-bg-color">
           <div class="container">
             <div class="row">
-              <div class="col-12 col-md-3 text-primary-50 mt-140">
-                <h1 class="heading-header-title mb-24">關於羊蹄</h1>
+              <div class="about-sheepo col-12 col-md-3 text-primary-50">
+                <h1 class=" mb-24">關於羊蹄</h1>
                 <h5 class="heading-small">About Sheepo Coffee</h5>
               </div>
             </div>
@@ -151,7 +151,7 @@
           
         </div>
 
-        <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="faq-qa accordion accordion-flush" id="accordionFlushExample">
 
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
