--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -12,11 +12,130 @@
 <body>
   <%- include('./layout/header'); -%>
     <main class="container">
-      <h1>產品詳情頁</h1>
+      <section class="py-40">
+        <!--麵包屑導覽-->
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="mb-40">
+          <ol class="breadcrumb me-auto mb-lg-0 text-primary-50 ">
+            <li class="breadcrumb-item">
+              <a class="nav-link" aria-current="page" href="products.html">線上商店</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a class="nav-link d-inline-block" aria-current="page" href="#">南美洲產區</a>
+            </li>
+            <li class="breadcrumb-item active fw-bold primary-900" aria-current="page">祕魯 薇拉瑞卡 安迪亞斯莊園</li>
+          </ol>
+        </nav>
+
+        <div class="row">
+          <!--產品圖片-->
+          <div class="col-7">
+            <img src="/images/productdetail/productdetail.png">
+          </div>
+
+          <div class="col-5">
+            <div class="mb-40">
+              <h1 class="h2 mb-16">祕魯 薇拉瑞卡 安迪亞斯莊園</h1>
+              <p class="h5 text-primary-400 mb-16 me-8">NT$280</p>
+            </div>
+
+            <div class="mb-40">
+              <p class="mb-8">烘焙度 淺</p>
+              <p class="mb-8">處理法日曬</p>
+              <p class="mb-8">品種 橘波旁</p>
+              <p class="mb-8">高度 1,600 ~ 1,700m</p>
+              <p class="mb-8">風味 香草、李子、核桃、梅酒、太妃糖</p>
+            </div>
+
+            <div class="mb-40">
+              <h3 class="mb-8">規格</h3>
+              <div class="d-flex flex-wrap gap-8 mb-8">
+                <button type="button" class="btn btn-outline-secondary">原豆0.25磅</button>
+                <button type="button" class="btn btn-outline-secondary">原豆0.5磅</button>
+                <button type="button" class="btn btn-outline-secondary">濾掛十包</button>
+              </div>
+            </div>
+
+            <div class="mb-40">
+              <h3 class="mb-8">數量</h3>
+              <div class="input-group input-group-sm pd-qty mb-4">
+                <button class="btn btn-outline-brown" type="button" id="qtyMinus" aria-label="減少">–</button>
+                <input type="number" class="form-control text-center" id="qty" value="1" min="1">
+                <button class="btn btn-outline-brown" type="button" id="qtyPlus" aria-label="增加">+</button>
+              </div>
+            </div>
+
+            <div class="d-flex align-items-center gap-3">
+              <button class="btn btn-brown btn-lg rounded-pill flex-grow-1">加入購物車</button>
+            </div>
+            <div>
+              <button class="btn btn-outline-brown icon-btn" aria-label="加入收藏">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--沖煮資訊-->
+      <section class="py-64">
+        <p class="eyebrow small fw-semibold mb-12">Brewing Information</p>
+        <div class="d-flex align-items-center gap-3 mb-64">
+          <h3 class="mb-0">沖煮資訊</h3>
+          <hr class="flex-grow-1 sep m-0">
+        </div>
+
+        <div class="row row-cols-2 row-cols-md-5 g-4 text-center">
+
+        <div class="col">
+            <img src="/images/productdetail/water.png"
+              alt="water" class="mb-12">
+            <h4 class="h6" mb-4>水量</h4>
+            <p>300 cc</p>
+        </div>
+
+                <div class="col">
+            <img src="/images/productdetail/coffee_weight.png"
+              alt="coffee_weight" class="mb-12">
+            <h4 class="h6" mb-4>咖啡量</h4>
+            <p>20 g</p>
+        </div>
+
+                <div class="col">
+            <img src="/images/productdetail/time.png"
+              alt="time" class="mb-12">
+            <h4 class="h6" mb-4>沖煮時間</h4>
+            <p>100 秒</p>
+        </div>
+
+                <div class="col">
+            <img src="/images/productdetail/temper.png"
+              alt="temper" class="mb-12">
+            <h4 class="h6" mb-4>注水溫度</h4>
+            <p>92°C</p>
+        </div>
+
+                <div class="col">
+            <img src="/images/productdetail/steaming.png"
+              alt="steaming" class="mb-12">
+            <h4 class="h6" mb-4>悶蒸</h4>
+            <p>30 秒</p>
+        </div>
+        </div>
+      </section>
+
+      <!--你可能也喜歡-->
+      <section class="py-64">
+        <p class="eyebrow small fw-semibold mb-12">Guess You Will Like</p>
+        <div class="d-flex align-items-center gap-3 mb-64">
+          <h3 class="mb-0">你可能也喜歡</h3>
+          <hr class="flex-grow-1 sep m-0">
+        </div>
+
+      </section>
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
-     <%- include('./layout/js'); -%>
+      <%- include('./layout/js'); -%>
 </body>
 
 </html>
