--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>關於羊蹄</title>
-        <script type="module" crossorigin src="/coffee/assets/main-CBlIU_EN.js"></script>
-        <link rel="stylesheet" crossorigin href="/coffee/assets/main-D-7ivw4B.css">
+        <script type="module" crossorigin src="/coffee/assets/main-CjyPje3t.js"></script>
+        <link rel="stylesheet" crossorigin href="/coffee/assets/main-a-JDcckq.css">
       </head>
 
   <body>
@@ -27,7 +27,7 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- nav -->
+          <!-- 折疊內容 -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
             <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
@@ -95,8 +95,8 @@
         <div class="about-bg-color">
           <div class="container">
             <div class="row">
-              <div class="col-12 col-md-3 text-primary-50 mt-140">
-                <h1 class="heading-header-title mb-24">關於羊蹄</h1>
+              <div class="about-sheepo col-12 col-md-3 text-primary-50">
+                <h1 class=" mb-24">關於羊蹄</h1>
                 <h5 class="heading-small">About Sheepo Coffee</h5>
               </div>
             </div>
@@ -131,8 +131,8 @@
 
 
       <!-- service -->
-      <div class="container">
-        <div class="service">
+      <div class="service">
+        <div class="container">
           <div class="text-center service-title">
             <h3 class="heading-small text-accent-300 pb-12">Service</h3>
             <h2 class="heading-xxlarge text-primary-950">服務項目</h2>
@@ -222,7 +222,6 @@
 
     <!-- FAQ -->
       <div class="faq">
-
         <div class="text-center service-title">
           <h3 class="heading-small text-accent-300 pb-12">FAQ</h3>
           <h2 class="heading-xxlarge text-primary-950">常見ＱＡ</h2>
@@ -230,7 +229,7 @@
           
         </div>
 
-        <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="faq-qa accordion accordion-flush" id="accordionFlushExample">
 
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
@@ -311,7 +310,7 @@
                 <!-- logo -->
                 <div class="col-3 col-md-4">
                     <div><a href="index.html">
-                            <img src="/assets/images/Type=White.png" alt="品牌 Logo" width="240" height="56" />
+                            <img src="/coffee/assets/Logo-Dx50JUCF.svg" alt="品牌 Logo" width="240" height="56" />
                         </a></div>
                 </div>
                 <!-- 店家資訊 -->
