--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-CBlIU_EN.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-D-7ivw4B.css">
+    <script type="module" crossorigin src="/coffee/assets/main-CjyPje3t.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-a-JDcckq.css">
   </head>
 
 <body class="products-bg">
@@ -28,7 +28,7 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- nav -->
+          <!-- 折疊內容 -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
             <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
@@ -551,7 +551,7 @@
                 <!-- logo -->
                 <div class="col-3 col-md-4">
                     <div><a href="index.html">
-                            <img src="/assets/images/Type=White.png" alt="品牌 Logo" width="240" height="56" />
+                            <img src="/coffee/assets/Logo-Dx50JUCF.svg" alt="品牌 Logo" width="240" height="56" />
                         </a></div>
                 </div>
                 <!-- 店家資訊 -->
