--- a/pages/about.html
+++ b/pages/about.html
@@ -91,7 +91,7 @@
           </div>
 
           <div class="booking-right col-md-6">
-            <img src="/public/images/index/about-2.png" alt="" />
+            <img src="/images/index/about-2.png" alt="" />
           </div>
 
         </div>
@@ -133,7 +133,7 @@
           </div>
 
           <div class="booking-right col-md-6">
-            <img src="/public/images/index/about-1.png" alt="" />
+            <img src="/images/index/about-1.png" alt="" />
           </div>
 
           </div>
