--- a/explore.html
+++ b/explore.html
@@ -10,8 +10,8 @@
     fetchpriority="high" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
-    <script type="module" crossorigin src="/coffee/assets/main-CjyPje3t.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-a-JDcckq.css">
+    <script type="module" crossorigin src="/coffee/assets/main-CwzMOapX.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-r4WdY22v.css">
   </head>
 
 <body>
@@ -76,14 +76,14 @@
         <nav class="d-flex justify-content-end gap-3">
           <a class="nav-link me-12 icon" href="#">
             <img
-              src="data:image/svg+xml,%3csvg%20width='36'%20height='36'%20viewBox='0%200%2036%2036'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M3.75%206.375C3.75%205.75368%204.25368%205.25%204.875%205.25H5.71239C7.13809%205.25%207.99173%206.20848%208.47988%207.09948C8.80524%207.69341%209.04062%208.38227%209.22473%209.00593C9.27459%209.00201%209.32511%209%209.3762%209H28.1222C29.3675%209%2030.2667%2010.1916%2029.9253%2011.3892L27.1836%2021.0028C26.6784%2022.7748%2025.0593%2023.9967%2023.2169%2023.9967H14.2947C12.4369%2023.9967%2010.8084%2022.7549%2010.3167%2020.9634L9.17601%2016.8068L7.28811%2010.4337L7.28505%2010.4225C7.0515%209.57077%206.8323%208.77508%206.50659%208.18055C6.19029%207.6032%205.93815%207.5%205.71239%207.5H4.875C4.25368%207.5%203.75%206.99632%203.75%206.375ZM13.5%2031.5C15.1569%2031.5%2016.5%2030.1569%2016.5%2028.5C16.5%2026.8431%2015.1569%2025.5%2013.5%2025.5C11.8431%2025.5%2010.5%2026.8431%2010.5%2028.5C10.5%2030.1569%2011.8431%2031.5%2013.5%2031.5ZM24%2031.5C25.6569%2031.5%2027%2030.1569%2027%2028.5C27%2026.8431%2025.6569%2025.5%2024%2025.5C22.3431%2025.5%2021%2026.8431%2021%2028.5C21%2030.1569%2022.3431%2031.5%2024%2031.5Z'%20fill='%23F7F6EF'/%3e%3c/svg%3e"
+              src="/coffee/images/header/ic_Shopping_Cart.svg"
               alt="購物車"
               width="26"
               height="26" />
           </a>
           <a class="nav-link icon" href="#">
             <img
-              src="data:image/svg+xml,%3csvg%20width='36'%20height='36'%20viewBox='0%200%2036%2036'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M26.6317%2021.0008C28.4949%2021.0008%2030.0051%2022.511%2030.0051%2024.3741V25.7517C30.0051%2026.6118%2029.7363%2027.4503%2029.2362%2028.1501C26.9173%2031.3949%2023.1309%2033.0024%2018.0006%2033.0024C12.8691%2033.0024%209.08464%2031.3943%206.7714%2028.1477C6.27346%2027.4488%206.00586%2026.6121%206.00586%2025.754V24.3741C6.00586%2022.511%207.51613%2021.0008%209.37916%2021.0008H26.6317ZM18.0006%203.00781C22.1427%203.00781%2025.5006%206.36568%2025.5006%2010.5078C25.5006%2014.65%2022.1427%2018.0078%2018.0006%2018.0078C13.8584%2018.0078%2010.5005%2014.65%2010.5005%2010.5078C10.5005%206.36568%2013.8584%203.00781%2018.0006%203.00781Z'%20fill='%23F7F6EF'/%3e%3c/svg%3e"
+              src="/coffee/images//header/ic_User.svg"
               alt="會員"
               width="24"
               height="30" />
@@ -347,7 +347,7 @@
                 <!-- logo -->
                 <div class="col-3 col-md-4">
                     <div><a href="index.html">
-                            <img src="/coffee/assets/Logo-Dx50JUCF.svg" alt="品牌 Logo" width="240" height="56" />
+                            <img src="/coffee/images//header/Logo.svg" alt="品牌 Logo" width="240" height="56" />
                         </a></div>
                 </div>
                 <!-- 店家資訊 -->
