--- a/pages/products.html
+++ b/pages/products.html
@@ -22,7 +22,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item header1 active">
-              <div class="container my-56">
+              <div class="container my-120">
                 <div class="d-flex align-items-center mb-24">
                   <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
                   <div class="horizontal-line me-16"></div>
@@ -33,7 +33,7 @@
               </div>
             </div>
             <div class="carousel-item header2">
-              <div class="container my-56">
+              <div class="container my-120">
                 <div class="d-flex align-items-center mb-24">
                   <span class="heading-xxxlarge text-primary-50 mb-0">中秋節</span>
                   <div class="horizontal-line me-16"></div>
@@ -429,7 +429,7 @@
           <ul class="pagination mb-0">
             <li class="page-item mx-6">
               <a class="page-link products-pagination paragraph-large py-4 px-8" href="#" aria-label="Previous">
-                <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0Z" fill="#2F2119"/></svg>
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M15.53 4.22a.75.75 0 0 1 0 1.06L8.81 12l6.72 6.72a.75.75 0 1 1-1.06 1.06l-7.25-7.25a.75.75 0 0 1 0-1.06l7.25-7.25a.75.75 0 0 1 1.06 0Z" fill="#2F2119"/></svg>
               </a>
             </li>
 
