--- a/pages/about.html
+++ b/pages/about.html
@@ -29,23 +29,27 @@
       <!-- 品牌故事 -->
       <div class="about-2">
         <div class="container">
-          <div class="row">
-            <div class="col-12 text-primary-950">
-              <div class="d-flex mb-56 align-items-center m-120">
+          <div class="row text-primary-950">
+            <div class="col-md-12 mt-md-120 mb-md-120 mt-40 mb-40">
+
+              <div class="d-flex mb-56 mb-md-20 align-items-center ">
                 <h2 class="heading-xlarge">品牌故事</h2>
                 <p class="about-horizontal"></p>
               </div>
-              
-              <h3 class="paragraph-medium mb-40">Sheepo Coffee 羊蹄咖啡</h3>
-              <p>取​名源自於​咖​啡豆​的​故事​</p>
-              <p>傳說​衣索​比亞​的​高原​上，​有​個牧羊人​看到​自家​的​綿羊​特別​有​精神</p>
-              <p class="mb-40">走進​一​看​才​發現​他​們啃食​了​某種​紅色果實，​而​這正​是​咖啡​漿果。</p>
-              <p>取羊蹄​為名，​就是要強調步步踏實的精神。</p>
-              <p>與獨立尋豆師合作，持續找尋獨具特色的咖啡生豆。</p>
-              <p class="mb-56">從烘焙到沖煮，皆是我們親自生產與測試，為的就是建立品質一致性。</p>
-              <p class="Paragraph/Medium text-primary-500">
-                「我們不想只賣咖啡，我想賣一種值得信賴的味道。」
-              </p>
+
+              <div class="about-2-text">
+                <p class="mb-40">Sheepo Coffee 羊蹄咖啡</p>
+                <p>取​名源自於​咖​啡豆​的​故事​</p>
+                <p>傳說​衣索​比亞​的​高原​上，​有​個牧羊人​看到​自家​的​綿羊​特別​有​精神</p>
+                <p class="mb-40">走進​一​看​才​發現​他​們啃食​了​某種​紅色果實，​而​這正​是​咖啡​漿果。</p>
+                <p>取羊蹄​為名，​就是要強調步步踏實的精神。</p>
+                <p>與獨立尋豆師合作，持續找尋獨具特色的咖啡生豆。</p>
+                <p class="mb-56">從烘焙到沖煮，皆是我們親自生產與測試，為的就是建立品質一致性。</p>
+                <p class="text-primary-500">
+                  「我們不想只賣咖啡，我想賣一種值得信賴的味道。」
+                </p>
+
+              </div>
             </div>
           </div>
         </div>
@@ -55,7 +59,7 @@
       <!-- service -->
       <div class="service">
         <div class="container">
-          <div class="text-center service-title">
+          <div class="text-center mt-md-120 mb-md-80 mt-40 mb-40">
             <h3 class="heading-small text-accent-300 pb-12">Service</h3>
             <h2 class="heading-xxlarge text-primary-950">服務項目</h2>
           </div>
