0912 service font set

--- a/pages/about.html
+++ b/pages/about.html
@@ -60,22 +60,23 @@
       <div class="service">
         <div class="container">
           <div class="text-center mt-md-120 mb-md-80 mt-40 mb-40">
-            <h3 class="heading-small text-accent-300 pb-12">Service</h3>
-            <h2 class="heading-xxlarge text-primary-950">服務項目</h2>
+            <h4 class="  pb-12">Service</h4>
+            <h2 class="">服務項目</h2>
           </div>
 
-          <!-- Book a tasting -->
-          <div class="row book">
+          <!-- Booking a test -->
+          <div class="row mb-md-80 text-primary-950">
             <div class="booking-left pe-40 col-md-6">
-              <h2 class="heading-xlarge text-primary-950 booking-spacing pb-12">
+              <h3 class="pb-12">
                 預約試喝
-              </h2>
-              <div class="d-flex mb-40">
-                <h3 class="label-large text-primary-950">Book a tasting</h3>
+              </h3>
+
+              <div class="d-flex mb-md-40 mb-20">
+                <h5 class="">Book a tasting</h5>
                 <p class="service-horizontal"></p>
               </div>
 
-              <div class="paragraph-large text-primary-950 mb-40">
+              <div class="paragraph-large mb-40">
                 <p>由於工作室內空間有限，目前暫無開放內用服務。</p>
                 <p>
                   若您有咖啡試飲需求，歡迎填寫預約表單，我們將為您保留專屬時段。
@@ -106,11 +107,11 @@
           <!-- Business Cooperation -->
           <div class="row book">
             <div class="booking-left pe-40 col-md-6">
-              <h2 class="heading-xlarge text-primary-950 booking-spacing pb-12">
+              <h3 class="heading-xlarge booking-spacing pb-12">
                 商業合作
-              </h2>
-              <div class="d-flex mb-40">
-                <h3 class="label-large text-primary-950">Business Cooperation</h3>
+              </h3>
+              <div class="d-flex mb-md-40 mb-20">
+                <h5 class="label-large">Business Cooperation</h5>
                 <p class="service-horizontal"></p>
               </div>
 
