--- a/pages/products.html
+++ b/pages/products.html
@@ -22,11 +22,11 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item header1 active">
-              <div class="container my-120">
-                <div class="d-flex align-items-center mb-24">
-                  <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
+              <div class="container my-md-120 mt-28 mb-16">
+                <div class="carousel-title d-flex align-items-center mb-24">
+                  <span class="carousel-title heading-small text-primary-50 mb-0">限時折扣</span>
                   <div class="horizontal-line me-16"></div>
-                  <span class="heading-xxxlarge text-primary-50 mb-0">全店滿千折百</span>
+                  <span class="carousel-title heading-small text-primary-50 mb-0">全店滿千折百</span>
                 </div>
                 <p class="paragraph-xxlarge mb-4 text-primary-50">現在下單滿 NT$1,000 現折 NT$100</p>
                 <p class="paragraph-xxlarge text-primary-50">把喜歡的風味一次帶回家！</p>
@@ -49,29 +49,29 @@
 
     <main class="container-xl">
       <!-- 商品NAV -->
-      <div class="row flex-row products-nav mb-md-40">
+      <div class="row flex-md-row flex-column products-nav mb-md-40">
 
-        <div class="col-9">
-          <ul class="nav nav-underline">
+        <div class="col-md-9">
+          <ul class="nav nav-underline d-flex flex-row flex-nowrap overflow-x-auto">
             <li class="nav-item">
-              <a class="nav-link paragraph-medium active py-20 px-15" aria-current="page" href="#">全部商品</a>
+              <a class="products-nav-link nav-link paragraph-medium active text-center py-20 px-md-16" aria-current="page" href="#">全部商品</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">非洲產區</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">非洲產區</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">南美洲產區</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">南美洲產區</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">亞洲產區</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">亞洲產區</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">限定禮盒</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">限定禮盒</a>
             </li>                        
           </ul>
         </div>
 
-        <div class="col-3 my-12">
+        <div class="col-md-3 my-12">
 
               <div class="search position-relative">
                   
@@ -428,7 +428,7 @@
         <nav aria-label="Page navigation example">
           <ul class="pagination mb-0">
             <li class="page-item mx-6">
-              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#" aria-label="Previous">
+              <a class="page-link products-pagination products-pagination-bothSide paragraph-large py-4 px-8" href="#" aria-label="Previous">
                 <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M15.53 4.22a.75.75 0 0 1 0 1.06L8.81 12l6.72 6.72a.75.75 0 1 1-1.06 1.06l-7.25-7.25a.75.75 0 0 1 0-1.06l7.25-7.25a.75.75 0 0 1 1.06 0Z" fill="#2F2119"/></svg>
               </a>
             </li>
@@ -454,7 +454,7 @@
             </li>
             
             <li class="page-item mx-6">
-              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#" aria-label="Previous">
+              <a class="page-link products-pagination products-pagination-bothSide paragraph-large py-4 px-8" href="#" aria-label="Previous">
                 <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M8.47 4.22a.75.75 0 0 0 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25a.75.75 0 0 0 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z" fill="#2F2119"/></svg>
               </a>
             </li>            
