--- a/pages/products.html
+++ b/pages/products.html
@@ -23,7 +23,7 @@
           <div class="carousel-inner">
             <div class="carousel-item header1 active">
               <div class="container my-md-120 mt-28 mb-16">
-                <div class="carousel-title d-flex align-items-center mb-24">
+                <div class="carousel-title d-flex align-items-center mb-md-24 mb-8">
                   <span class="carousel-title heading-small text-primary-50 mb-0">限時折扣</span>
                   <div class="horizontal-line me-16"></div>
                   <span class="carousel-title heading-small text-primary-50 mb-0">全店滿千折百</span>
@@ -33,11 +33,11 @@
               </div>
             </div>
             <div class="carousel-item header2">
-              <div class="container my-120">
-                <div class="d-flex align-items-center mb-24">
-                  <span class="heading-xxxlarge text-primary-50 mb-0">中秋節</span>
+              <div class="container my-md-120 mt-28 mb-16">
+                <div class="carousel-title d-flex align-items-center mb-md-24 mb-8">
+                  <span class="carousel-title heading-small text-primary-50 mb-0">中秋節</span>
                   <div class="horizontal-line me-16"></div>
-                  <span class="heading-xxxlarge text-primary-50 mb-0">限定濾掛禮盒</span>
+                  <span class="carousel-title heading-small text-primary-50 mb-0">限定濾掛禮盒</span>
                 </div>
                 <p class="paragraph-xxlarge mb-4 text-primary-50">這個中秋不只賞月，也要賞味</p>
                 <p class="paragraph-xxlarge text-primary-50">送出一份不一樣的團圓滋味！</p>
