--- a/explore.html
+++ b/explore.html
@@ -10,8 +10,8 @@
     fetchpriority="high" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
-    <script type="module" crossorigin src="/coffee/assets/main-CtJCNTiy.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BA7HI9j_.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DgoQPUyy.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CEh8Et9V.css">
   </head>
 
 <body>
@@ -34,10 +34,10 @@
           </button>
           <!-- 折疊內容 -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
-            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
+            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-md-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="about.html"
                   >關於羊蹄</a
@@ -45,7 +45,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="products.html"
                   >線上商店</a
@@ -53,7 +53,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="explore.html"
                   >探索風味</a
