--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-CtJCNTiy.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BA7HI9j_.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DgoQPUyy.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CEh8Et9V.css">
   </head>
 
 <body>
@@ -32,10 +32,10 @@
           </button>
           <!-- 折疊內容 -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
-            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
+            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-md-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="about.html"
                   >關於羊蹄</a
@@ -43,7 +43,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="products.html"
                   >線上商店</a
@@ -51,7 +51,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="explore.html"
                   >探索風味</a
