--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-CtJCNTiy.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BA7HI9j_.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DgoQPUyy.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CEh8Et9V.css">
   </head>
 
 <body class="products-bg">
@@ -30,10 +30,10 @@
           </button>
           <!-- 折疊內容 -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
-            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
+            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-md-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="about.html"
                   >關於羊蹄</a
@@ -41,7 +41,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="products.html"
                   >線上商店</a
@@ -49,7 +49,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="explore.html"
                   >探索風味</a
@@ -100,22 +100,22 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item header1 active">
-              <div class="container my-56">
-                <div class="d-flex align-items-center mb-24">
-                  <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
+              <div class="container my-md-120 mt-28 mb-16">
+                <div class="carousel-title d-flex align-items-center mb-md-24 mb-8">
+                  <span class="carousel-title heading-small text-primary-50 mb-0">限時折扣</span>
                   <div class="horizontal-line me-16"></div>
-                  <span class="heading-xxxlarge text-primary-50 mb-0">全店滿千折百</span>
+                  <span class="carousel-title heading-small text-primary-50 mb-0">全店滿千折百</span>
                 </div>
                 <p class="paragraph-xxlarge mb-4 text-primary-50">現在下單滿 NT$1,000 現折 NT$100</p>
                 <p class="paragraph-xxlarge text-primary-50">把喜歡的風味一次帶回家！</p>
               </div>
             </div>
             <div class="carousel-item header2">
-              <div class="container my-56">
-                <div class="d-flex align-items-center mb-24">
-                  <span class="heading-xxxlarge text-primary-50 mb-0">中秋節</span>
+              <div class="container my-md-120 mt-28 mb-16">
+                <div class="carousel-title d-flex align-items-center mb-md-24 mb-8">
+                  <span class="carousel-title heading-small text-primary-50 mb-0">中秋節</span>
                   <div class="horizontal-line me-16"></div>
-                  <span class="heading-xxxlarge text-primary-50 mb-0">限定濾掛禮盒</span>
+                  <span class="carousel-title heading-small text-primary-50 mb-0">限定濾掛禮盒</span>
                 </div>
                 <p class="paragraph-xxlarge mb-4 text-primary-50">這個中秋不只賞月，也要賞味</p>
                 <p class="paragraph-xxlarge text-primary-50">送出一份不一樣的團圓滋味！</p>
@@ -127,29 +127,29 @@
 
     <main class="container-xl">
       <!-- 商品NAV -->
-      <div class="row flex-row products-nav mb-md-40">
+      <div class="row flex-md-row flex-column products-nav mb-md-40">
 
-        <div class="col-9">
-          <ul class="nav nav-underline">
+        <div class="col-md-9">
+          <ul class="nav nav-underline d-flex flex-row flex-nowrap overflow-x-auto">
             <li class="nav-item">
-              <a class="nav-link paragraph-medium active py-20 px-15" aria-current="page" href="#">全部商品</a>
+              <a class="products-nav-link nav-link paragraph-medium active text-center py-20 px-md-16" aria-current="page" href="#">全部商品</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">非洲產區</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">非洲產區</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">南美洲產區</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">南美洲產區</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">亞洲產區</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">亞洲產區</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link paragraph-medium py-20 px-15" href="#">限定禮盒</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">限定禮盒</a>
             </li>                        
           </ul>
         </div>
 
-        <div class="col-3 my-12">
+        <div class="col-md-3 my-12">
 
               <div class="search position-relative">
                   
@@ -506,8 +506,8 @@
         <nav aria-label="Page navigation example">
           <ul class="pagination mb-0">
             <li class="page-item mx-6">
-              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#" aria-label="Previous">
-                <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0Z" fill="#2F2119"/></svg>
+              <a class="page-link products-pagination products-pagination-bothSide paragraph-large py-4 px-8" href="#" aria-label="Previous">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M15.53 4.22a.75.75 0 0 1 0 1.06L8.81 12l6.72 6.72a.75.75 0 1 1-1.06 1.06l-7.25-7.25a.75.75 0 0 1 0-1.06l7.25-7.25a.75.75 0 0 1 1.06 0Z" fill="#2F2119"/></svg>
               </a>
             </li>
 
@@ -532,7 +532,7 @@
             </li>
             
             <li class="page-item mx-6">
-              <a class="page-link products-pagination paragraph-large py-4 px-8" href="#" aria-label="Previous">
+              <a class="page-link products-pagination products-pagination-bothSide paragraph-large py-4 px-8" href="#" aria-label="Previous">
                 <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M8.47 4.22a.75.75 0 0 0 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25a.75.75 0 0 0 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z" fill="#2F2119"/></svg>
               </a>
             </li>            
