--- a/pages/index.html
+++ b/pages/index.html
@@ -105,9 +105,9 @@
             <div class="horizontal-line2"></div>
           </div>
         </div>
-        <div class="row row-cols-md-3 gx-md-64 gx-20 mb-64">
+        <div class="row row-cols-md-3 gx-md-64 gx-20 mb-64 flex-nowrap overflow-hidden overflow-x-auto">
           <!-- whiteCoffeeCup -->
-          <div class="col">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
@@ -146,7 +146,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
@@ -184,7 +184,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
@@ -224,14 +224,14 @@
         </div>
         <div class="new">
           <p class="heading-small ls-2 text-accent-300 mb-12">NEW</p>
-          <div class="title d-flex align-items-center mb-40">
+          <div class="title d-flex align-items-center mb-24 mb-md-40">
             <p class="heading-xxlarge text-primary-950 ls-2 me-20 mb-0">熱銷品項</p>
             <div class="horizontal-line2"></div>
           </div>
         </div>
-        <div class="row row-cols-md-3 gx-md-64 gx-20 mb-64">
+        <div class="row row-cols-md-3 gx-md-64 gx-20 flex-nowrap overflow-hidden overflow-x-auto">
           <!-- whiteCoffeeCup -->
-          <div class="col">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
@@ -268,7 +268,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
@@ -307,7 +307,7 @@
               </div>
             </a>
           </div>
-          <div class="col">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
